[tool.isort]
profile = "black"

[tool.poetry]
name = "feynmanium"
version = "0.1.0"
description = "A discord bot that works."
authors = ["Tony Brown <tb148@tuta.io>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
toml = "^0.10.2"
sympy = "^1.10.1"
googletrans-py = "^4.0.0"
mpmath = "^1.2.1"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git" }
chess = "^1.9.2"
CairoSVG = "^2.5.2"

[tool.poetry.dev-dependencies]
pylama = { extras = ["all"], version = "^8.3.8" }
jedi = "^0.18.1"
poetry = "^1.1.13"
black = "^22.3.0"
isort = { extras = [
    "requirements_deprecated_finder",
    "pipfile_deprecated_finder"
], version = "^5.10.1" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
