[tool.black]
line-length = 80
skip-magic-trailing-comma = true
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["cairosvg", "discord.ext", "googletrans"]
ignore_missing_imports = true

[tool.poetry]
name = "feynmanium"
version = "0.1.0"
description = "A discord bot that works."
authors = ["Tony Brown <tb148@tuta.io>"]
license = "AGPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/tb148/feynmanium"
include = ["README.rst"]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
sympy = "^1.10.1"
googletrans-py = "^4.0.0"
mpmath = "^1.2.1"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git" }
chess = "^1.9.2"
CairoSVG = "^2.5.2"
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]
jedi = "^0.18.1"
poetry = "^1.1.13"
black = "^22.3.0"
isort = { extras = [
    "requirements_deprecated_finder",
    "pipfile_deprecated_finder"
], version = "^5.10.1" }
pylint = "^2.14.5"
mypy = "^0.971"
types-toml = "^0.10.8"
flake8 = "^4.0.1"

[tool.pylint.format]
max-line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
